force-app/main/default/objects/Recruitment__c/Recruitment__c.object-meta.xml
<CustomObject>
    <label>Recruitment</label>
    <nameField>
        <displayFormat>REC-{00000}</displayFormat>
        <label>Recruitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>