force-app/main/default/objects/Recruitment__c/fields/Additional_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Replacement__c</fullName>
    <label>Additional / Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>