force-app/main/default/objects/Recruitment__c/fields/Hiring_Request_Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Request_Raised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Request Raised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitments2</relationshipName>
    <type>Lookup</type>
</CustomField>