force-app/main/default/objects/Recruitment__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitments1</relationshipName>
    <type>Lookup</type>
</CustomField>