force-app/main/default/objects/Recruitment__c/fields/Position_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>Position_Applied_For__c</fullName>
    <label>Position Applied For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>