force-app/main/default/objects/Recruitment__c/fields/Recruiter_Remark__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Remark__c</fullName>
    <label>Recruiter Remark / Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>