force-app/main/default/objects/Recruitment__c/validationRules/Status_cannot_be_changed_once_it_is_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_changed_once_it_is_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISPICKVAL(PRIORVALUE(Status__c), &quot;Selected&quot;),
        ISPICKVAL(PRIORVALUE(Status__c), &quot;Rejected&quot;)
    ),
    TEXT(Status__c) &lt;&gt; TEXT(PRIORVALUE(Status__c))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed once it is set to Selected or Rejected</errorMessage>
</ValidationRule>