force-app/main/default/objects/Recruitment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Gender__c</columns>
    <columns>Status__c</columns>
    <columns>Position_Applied_For__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>